bubble spacing and tabs authorization fix after rebase

--- a/webapp/src/css/inbox.less
+++ b/webapp/src/css/inbox.less
@@ -1498,7 +1498,7 @@ a.fa:hover {
       }
     }
     .mm-badge-overlay {
-      right: 3px;
+      right: 10%;
     }
     .inner {
       height: 60px;
